--- a/letter_theme/templates/index.html
+++ b/letter_theme/templates/index.html
@@ -13,7 +13,7 @@
                 <footer class="post-info">
                     <div class="row">
                         <time class="published col c2" datetime="{{ article.date.isoformat() }}"> {{ article.locale_date }}, </time>
-                        <address class="vcard author col c2">&nbsp;by
+                        <address class="vcard author col">&nbsp;by
                         {% for author in article.authors %}
                             <a class="url fn" href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
                         {% endfor %}
